# refl

./: CMakeLists.txt
examples/serialisation/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/refl/: refl.hpp  registry.hpp
